home page, warehouse controller, view and binding models

--- a/Stock.App/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Stock.App/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ExternalLoginConfirmationViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
