--- a/Stock.App/Views/Account/ResetPassword.cshtml
+++ b/Stock.App/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ResetPasswordViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
