--- a/Stock.App/Views/Account/SendCode.cshtml
+++ b/Stock.App/Views/Account/SendCode.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.SendCodeViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
