--- a/Stock.App/Views/Account/VerifyCode.cshtml
+++ b/Stock.App/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.VerifyCodeViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
