--- a/Stock.App/Views/Manage/ChangePassword.cshtml
+++ b/Stock.App/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ChangePasswordViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
