--- a/Stock.App/Views/Manage/ManageLogins.cshtml
+++ b/Stock.App/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ManageLoginsViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
