--- a/Stock.App/Views/Manage/SetPassword.cshtml
+++ b/Stock.App/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.SetPasswordViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
