--- a/Stock.App/Views/Account/ForgotPassword.cshtml
+++ b/Stock.App/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ForgotPasswordViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
