--- a/Stock.App/Views/Account/Register.cshtml
+++ b/Stock.App/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.RegisterViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
