--- a/Stock.App/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Stock.App/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.ExternalLoginListViewModel
+﻿@using Stock.Models.ViewModels.Account
+@model ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
