--- a/Stock.App/Views/Home/Index.cshtml
+++ b/Stock.App/Views/Home/Index.cshtml
@@ -1,31 +1,57 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<br />
+<div class="row">
+    <div class="col-xs-12">
+        <div class="container">
+            <h1 class="centered">Warehouse Inventory Tracker</h1>
+            <img src="~/Content/warehouse-led.jpg" alt="Storehouse image" class="img-responsive"/>
+        </div>
+    </div>
 </div>
+<br />
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-offset-1 col-md-5 col-xs-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title centered">Warehouses</h2>
+            </div>
+            <div class="panel-body">
+                <ul>
+                    <li>
+                        <p>Storage availability</p>
+                    </li>
+                    <li>
+                        <p>24/7 access</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="panel-footer">
+                <p class="centered"><a class="btn btn-default btn-sm" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-5 col-xs-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h2 class="panel-title centered">Records</h2>
+            </div>
+            <div class="panel-body">
+                <ul>
+                    <li>
+                        <p>Keep track of every incoming or outgoing stock</p>
+                    </li>
+                    <li>
+                        <p>Inventory data before and after the entry</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="panel-footer">
+                <p class="centered"><a class="btn btn-default btn-sm" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+        </div>
     </div>
 </div>
