--- a/Stock.App/Views/Manage/AddPhoneNumber.cshtml
+++ b/Stock.App/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.AddPhoneNumberViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
