--- a/Stock.App/Views/Manage/Index.cshtml
+++ b/Stock.App/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.IndexViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
