--- a/Stock.App/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Stock.App/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,5 @@
-﻿@model Stock.App.Models.VerifyPhoneNumberViewModel
+﻿@using Stock.Models.ViewModels.Manage
+@model VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
