--- a/Stock.App/Views/Shared/_Layout.cshtml
+++ b/Stock.App/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Warehouses", "All", "Warehouse")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", new {area = ""}, null)</li>
+                    <li>@Html.ActionLink("Warehouses", "All", "Warehouse", new { area = "" }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
