--- a/Stock.App/Views/Warehouse/All.cshtml
+++ b/Stock.App/Views/Warehouse/All.cshtml
@@ -22,7 +22,7 @@
             {
                 <div class="col-sm-10">
                     <div class="form-group">
-                        <input type="text" class="form-control" name="search" placeholder="Search by name address..." />
+                        <input type="text" class="form-control searchbar" name="search" placeholder="Search by name address..." />
                     </div>
                 </div>
                 <div class="col-sm-2">
