custom errors and finalized add-entry

--- a/WIT.App/Views/Home/Index.cshtml
+++ b/WIT.App/Views/Home/Index.cshtml
@@ -30,7 +30,9 @@
                 </ul>
             </div>
             <div class="panel-footer">
-                <p class="centered"><a class="btn btn-default btn-sm" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+                <p class="centered">
+                    @Html.ActionLink("See more >>", "All", "Warehouse", new { area = "" }, new { @class = "btn btn-default btn-sm" })
+                </p>
             </div>
         </div>
     </div>
@@ -50,7 +52,9 @@
                 </ul>
             </div>
             <div class="panel-footer">
-                <p class="centered"><a class="btn btn-default btn-sm" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+                <p class="centered">
+                    @Html.ActionLink("See more >>", "All", "Warehouse", new { area = "" }, new { @class = "btn btn-default btn-sm" })
+                </p>
             </div>
         </div>
     </div>
