--- a/WIT.App/Views/Home/Index.cshtml
+++ b/WIT.App/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
             </div>
             <div class="panel-footer">
                 <p class="centered">
-                    @Html.ActionLink("See more >>", "All", "Warehouse", new { area = "" }, new { @class = "btn btn-default btn-sm" })
+                    @Html.ActionLink("See more >>", "All", "Records", new { area = "" }, new { @class = "btn btn-default btn-sm" })
                 </p>
             </div>
         </div>
