--- a/WIT.App/Views/Warehouse/All.cshtml
+++ b/WIT.App/Views/Warehouse/All.cshtml
@@ -25,7 +25,7 @@
             {
                 <div class="col-sm-10">
                     <div class="form-group">
-                        <input type="text" class="form-control searchbar" name="search" placeholder="Search by name or address..." />
+                        <input type="text" class="form-control searchbar" name="search" placeholder="Search" />
                     </div>
                 </div>
                 <div class="col-sm-2">
