--- a/WIT.App/Views/Warehouse/Details.cshtml
+++ b/WIT.App/Views/Warehouse/Details.cshtml
@@ -74,8 +74,11 @@
 </div>
 <div class="row">
     <p class="centered">
-        @Html.ActionLink("Add Entry", "AddEntry", "Records", null, new { @class = "btn btn-default" }) |
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Info.Id }, new { @class = "btn btn-default" }) |
+        @Html.ActionLink("Add Entry", "AddEntry", "Records", null, new { @class = "btn btn-default" }) 
+        @if (User.IsInRole("Admin") || User.IsInRole("Moderator"))
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Info.Id }, new { @class = "btn btn-default" }) 
+        }
         @Html.ActionLink("Back to List", "All", null, new { @class = "btn btn-default" })
     </p>
 </div>
